--- a/taller/proyectoTaller/administrativo/templates/crear_departamento.html
+++ b/taller/proyectoTaller/administrativo/templates/crear_departamento.html
@@ -1,12 +1,12 @@
 {% extends "master.html" %}
-
 {% block content %}
-<h2>Editar Estudiante</h3>
+
+<h2>Crear Departamento</h3>
 
 <form action="" method="post">
   {% csrf_token %}
   {{formulario.as_p}}
-  <p><input type='submit' value='Actualizar'/></p>
+  <p><input type='submit' value='Agregar'/></p>
 </form>
 
 {% endblock %}
