--- a/taller/proyectoTaller/administrativo/templates/crear_edificio.html
+++ b/taller/proyectoTaller/administrativo/templates/crear_edificio.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
-
 {% block content %}
-<h2>Crear Estudiante</h3>
+
+<h2>Crear Edificio</h3>
 
 <form action="" method="post">
   {% csrf_token %}
