--- a/taller/appFlask/templates/index.html
+++ b/taller/appFlask/templates/index.html
@@ -8,8 +8,7 @@
   <body>
     <nav class="top_menu">
         <ul>
-          <li><a href="{% url 'los_telefonos' %}">INICIO</a></li>
-
+          <li><a href="{{% url_for 'listar_edificios' %}}">INICIO</a></li>
         </ul>
       </nav>
   </body>
