--- a/taller/appFlask/templates/losdepartamentos.html
+++ b/taller/appFlask/templates/losdepartamentos.html
@@ -18,6 +18,6 @@
     </ol>
     <hr>
     {% endfor%}
-    <a href="{{ url_for('index') }}">Volver</a>
+    <a href="{{ url_for('index') }}">Inicio</a>
   </body>
 </html>
