--- a/taller/appFlask/templates/losedificios.html
+++ b/taller/appFlask/templates/losedificios.html
@@ -19,6 +19,6 @@
     <hr>
     {% endfor%}
 
-    <a href="{{ url_for('index') }}">Volver</a>
+    <a href="{{ url_for('index') }}">Inicio</a>
   </body>
 </html>
